# auction-strategies

./: .gitignore  .hfignore  CADDY_GUIDE.md  Dockerfile  INTEGRATION.md  README.md  baseline.ipynb  caddy.html  evolved_params.json  full_simulation_claude.py  insights.json  ipl_2025_schedule.json  ipl_live_advisor.html  ipl_player_stats.csv  main.py  name_aliases.json  overrides.json  patch_pool.py  people.csv  player_intel.json  player_master.json  player_pool.json  player_roles.json  player_scoring_utils.py  pyproject.toml  removed_from_pool.json  scoring_rules.json  server.py  strategy_params.json  test_mock_auction.py  update_master.py
.github/prompts/: plan-iplAuctionStrategyPlatform.prompt.md
engine/: __init__.py  auction.py  export.py  intel.py  market.py  overrides.py  personas.py  pool.py  pta_strategies.py  scoring.py  simulation.py  strategies.py
