[project]
name = "auction-strategies"
version = "0.2.0"
description = "IPL Fantasy Auction Strategy Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "polars>=1.39.3",
    "seaborn>=0.13.2",
    # Engine additions
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "cma>=3.3.0",
    "httpx>=0.27.0",
]
